# firmware-nordic-nrf54lm20-dk

./: .gitignore  CMakeLists.txt  Dockerfile  Kconfig  LICENSE  README.md  app.overlay  prj.conf  sysbuild.conf
boards/: nrf54lm20dk_nrf54lm20a_cpuapp.overlay
ei-model/: conf_overlay.conf
src/: CMakeLists.txt  ei_at_handlers.cpp  ei_base64_encode.cpp  ei_device_nordic.cpp  ei_device_nordic.h  ei_sampler.cpp  flash_memory.cpp  main.cpp
src/inference/: ei_run_fusion_impulse.cpp
src/sensors/: ei_inertial_sensor.cpp
sysbuild/: mcuboot.conf  mcuboot.overlay
